scale 测试